src/objects/Checklist_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklists__c</fullName>
        <label># Checklists</label>
        <summaryForeignKey>Checklist_Versionaire__c.Checklist_Version_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sequence_Unique_Check__c</fullName>
        <label>Sequence Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Study_Type__c</fullName>
        <label>Study Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Study</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Theoretical</fullName>
                </value>
                <value>
                    <fullName>Therapy Study</fullName>
                </value>
                <value>
                    <fullName>Prognostic Study</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Study</fullName>
                </value>
                <value>
                    <fullName>Observational Study w/ Drugs</fullName>
                </value>
                <value>
                    <fullName>Secondary Data Analysis</fullName>
                </value>
                <value>
                    <fullName>Case Series</fullName>
                </value>
                <value>
                    <fullName>Single Case Report</fullName>
                </value>
                <value>
                    <fullName>Experimental</fullName>
                </value>
                <value>
                    <fullName>Observational</fullName>
                </value>
                <value>
                    <fullName>Meta Analysis</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Systematic</fullName>
                </value>
                <value>
                    <fullName>Simple (Narrative)</fullName>
                </value>
                <value>
                    <fullName>In Vivo</fullName>
                </value>
                <value>
                    <fullName>In Vitro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_Comments__c</fullName>
        <label>Version Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Checklist Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Study_Type__c</columns>
        <columns>Version_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Checklist Master ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_ChecklistItems_when_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Checklists__c ),  Active__c ==TRUE)</errorConditionFormula>
        <errorMessage>Cannot Add/Delete Checklist Items from an already Activated Checklist Master version.</errorMessage>
    </validationRules>
</CustomObject>